1.5/manifests/services-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: backend
  ports:
  - name: backend
    port: 8082
    targetPort: 8080
