1.5/manifests/services-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: frontend
  ports:
  - name: frontend
    port: 8081
    targetPort: 80
